k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalable-nginx-service
  labels:
    app: scalable-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: scalable-nginx
